<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ariketa3Calculadora</string>
    <string name="hello_world">Hello world!</string>
    <string name="boton9">9</string>
    <string name="boton8">8</string>
    <string name="boton7">7</string>
    <string name="boton6">6</string>
    <string name="boton5">5</string>
    <string name="boton4">4</string>
    <string name="boton3">3</string>
    <string name="boton2">2</string>
    <string name="boton1">1</string>
    <string name="boton0">0</string>
    <string name="botonPunto">.</string>
    <string name="botonMas">+</string>
    <string name="botonMenos">-</string>
    <string name="botonBider">*</string>
    <string name="botonZati">/</string>
    <string name="botonBerdin">=</string>
    <string name="title_activity_main_activity_new">MainActivityNew</string>

</resources>
